<resources>
    <string name="app_name">PutAWeather</string>
    <string name="openweathermap_key">50c53309251827771718be75b8f13074</string>
    <string name="mapsApiKey">AIzaSyB4n16pfOaHQ5yR9lTtVkMe22jh07FmLYI</string>
    <string name="error_required_permission_not_granted">Required permission not granted. Please restart the app and try again by allowing the required permission.</string>
    <string name="error_upon_retrieving_weather">Fout bij het ophalen van de weersverwachting</string>
    <string name="error_upon_retrieving_location">Fout bij het ophalen van de locatie</string>
    <string name="dialog_button_ok">Ok</string>
    <string name="dialog_title_error">Error</string>
    <string name="weather_label">Weersomstandigheden</string>
    <string name="temperature_label">Temperatuur</string>
    <string name="temperature_feels_like_label">Temperatuur voelt als</string>
    <string name="temperature_min_label">Minimale temperatuur</string>
    <string name="temperature_max_label">Maximale temperatuur</string>
    <string name="temperature_visibility_label">Zicht</string>
    <string name="temperature_clouds_label">Bewolkt</string>
    <string name="temperature_humidity_label">Luchtvochtigheid</string>
    <string name="clouds_label">bewolkt</string>
    <string name="action_preferences">Achtergrond wijzigen</string>
    <string name="action_background">Achtergrond aan/uit</string>
    <string name="action_image">Afbeelding kiezen...</string>
    <string name="view_on_map">Tonen op kaart</string>
</resources>