<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/detailImageViewLayout"
        android:scaleType="fitXY"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weatherStateIconConstraintLayout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ImageView
            android:id="@+id/detailWeatherStateIcon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TableLayout
        android:id="@+id/tableCityLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/weatherStateIconConstraintLayout"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TableRow>

            <TextView
                android:id="@+id/detailCityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginRight="6dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toEndOf="@+id/detailWeatherStateIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detailCountryCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toEndOf="@+id/detailCityName"
                app:layout_constraintTop_toTopOf="parent" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tableWeatherLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherStateIconConstraintLayout">

        <TableRow>

            <TextView
                android:id="@+id/detailWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/weather_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/detailWeatherTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/temperature_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/detailWeatherTemperatureValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/detailWeatherFeelsLikeTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/temperature_feels_like_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/detailWeatherFeelsLikeTemperatureValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </TableRow>

        <TableRow android:paddingTop="15dp">

            <TextView
                android:id="@+id/detailWeatherMinimum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/temperature_min_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/detailWeatherMinimumValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/detailWeatherMaximum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/temperature_max_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/detailWeatherMaximumValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </TableRow>

        <TableRow android:paddingTop="16dp">

            <TextView
                android:id="@+id/detailWeatherVisibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/temperature_visibility_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/detailWeatherVisibilityValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/detailWeatherClouds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/temperature_clouds_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/detailWeatherCloudsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/detailWeatherCloudsDescriptionValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>